Stop image corners from bleeding

--- a/_assets/scss/postlist.scss
+++ b/_assets/scss/postlist.scss
@@ -1,3 +1,5 @@
+@import "compass/css3/background-clip";
+
 .postslist_wrapper {
   text-align: center;
 }
@@ -82,6 +84,7 @@
       margin: 0.5em 0;
       border: 1px solid #ccc;
       border-radius: 2*$local_borders;
+      @include background-clip(padding-box);
     }
   }
 
